<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:accessibilityLiveRegion="none"
    android:background="@color/colorfon"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:src="@mipmap/image"
        android:layout_marginTop="@dimen/spacing_medium"
        android:layout_marginBottom="@dimen/spacing_large"/>

    <TextView
        android:id="@+id/name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textSize="@dimen/text_size_macro"
        android:textStyle="italic"
        android:textColor="@color/colorName"
        android:text="@string/name"
        android:layout_below="@id/imageView"/>

    <TextView
        android:id="@+id/resume"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textSize="@dimen/text_size_ultra"
        android:textColor="@color/colorBlack"
        android:textStyle="bold"
        android:text="@string/title"
        android:layout_marginBottom="@dimen/text_size_ultra"
        android:layout_below="@id/name"/>
    <Button
        android:id="@+id/btn_info"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/info"
        android:textSize="@dimen/text_size_ultra"
        android:layout_marginBottom="@dimen/spacing_medium"
        android:textColor="@color/colorBlack"
        android:textStyle="bold"
        android:layout_below="@id/resume"
        android:onClick="onClick"
        android:background="@color/colorBlue"
        />
    <Button
        android:id="@+id/btn_skills"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/skills"
        android:textSize="@dimen/text_size_ultra"
        android:layout_marginBottom="@dimen/spacing_medium"
        android:textColor="@color/colorBlack"
        android:textStyle="bold"
        android:layout_below="@id/btn_info"
        android:onClick="onClick"
        android:background="@color/colorBlue"
        />
    <Button
        android:id="@+id/btn_contacts"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/contacts"
        android:textSize="@dimen/text_size_ultra"
        android:layout_marginBottom="@dimen/spacing_medium"
        android:textColor="@color/colorBlack"
        android:textStyle="bold"
        android:layout_below="@id/btn_skills"
        android:onClick="onClick"
        android:background="@color/colorBlue"
        />



</RelativeLayout>